[package]
name = "multiping"
version = "0.2.0"
edition = "2021"
description = "Send ping to multiple hosts simultaneously for LAN monitoring."

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
dns-lookup = "2.0.4"
indicatif = "0.17.7"
surge-ping = "0.8.0"
tokio = { version = "1.35.1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time"] }
